fix position fixed bug on iOS, add Modernizr

--- a/client/style/app.styl
+++ b/client/style/app.styl
@@ -86,3 +86,8 @@ rounded-corners(radius)
 @media only screen and (min-width: 480px)
   .u-showForMediumUp
     display: initial !important
+
+.u-fixedFix
+  .u-posFixed
+  .u-posFixedTop
+    position: absolute !important
